# analogico

./: .coverage  .gitignore  @NextStepsQWEN.md  AGENTS.md  APIDOC.md  ARDUINO_INTEGRATION.md  CODE_QUALITY_IMPROVEMENTS.md  Content.md  Dockerfile.gpu  GEMINI.md  GPU_COMPATIBILITY.md  GPU_SETUP.md  GPU_SETUP_MINIMAL.md  HARDWARE_COMPATIBILITY_CHANGES.md  HackGDL2026.md  LLMLog.md  LinkedIn.md  List.md  MEMORY_THREAD_SAFETY_FIXES.md  Nature_RRAM.md  Nature_RRAM_es.md  Next_Steps.md  Presentation.md  QWEN.md  README.md  SECURITY_FIXES_SUMMARY.md  Whitepaper.md  YouTube.md  arduino_rram_simulator.ino  basic_functionality_test.py  benchmark_performance.py  benchmark_runner.py  comprehensive_end_to_end_test.py  context.md  docker-compose.gpu.yml  examples.py  executive.md  gpu_end_to_end_test.py  material_specific_doc.md  performance_examples.py  (+3 more)
docs/: advanced_materials_simulation.md  benchmarking_suite.md  comprehensive_testing.md  data_pipeline_integration.md  edge_computing_integration.md  enhanced_visualization.md  fault_tolerant_algorithms.md  gpu_simulation_acceleration.md  ml_framework_integration.md  neuromorphic_modules.md  optimization_algorithms.md  performance_profiling.md  real_time_adaptive_systems.md  visualization_tools.md
examples/: arduino_integration_example.py
notebooks/: blockamc_scalability.ipynb  hp_inv_demonstration.ipynb  low_precision_analog_inversion.ipynb  low_precision_sandbox.py  stress_test_viz.py
src/: __init__.py  advanced_materials_simulation.py  advanced_rram_models.py  arduino_rram_interface.py  benchmark.py  benchmarking_suite.py  (+24 more)
(+10 files in other folders)
