[tool.poetry]
name = "analogico"
version = "0.1.0"
description = "Analogue computing algorithms for HP-INV"
authors = ["Wulfrano <wulfrano@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
numpy = "^1.26.0"
jax = "^0.4.0"
jaxlib = "^0.4.0"  # Required for JAX
matplotlib = "^3.5.0"
scipy = "^1.7.0"
invoke = "^2.0.0"
numba = "^0.58.0"  # For JIT compilation

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
hypothesis = "^6.0.0"
ruff = "^0.1.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
